--- a/functions/package.json
+++ b/functions/package.json
@@ -7,7 +7,7 @@
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log",
-    "test": "mocha ./tests/ --ui tdd"
+    "test": "mocha --timeout 10000 ./tests/ --ui tdd"
   },
   "engines": {
     "node": "16"
