--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,7 @@
   },
   "main": "index.js",
   "dependencies": {
+    "busboy": "^1.4.0",
     "chai": "^4.3.4",
     "chai-http": "^4.3.0",
     "cors": "^2.8.5",
@@ -22,6 +23,7 @@
     "firebase-admin": "^9.8.0",
     "firebase-functions": "^3.14.1",
     "mocha": "^9.1.3",
+    "react-chartjs-2": "^4.0.1",
     "ts-node": "^10.4.0"
   },
   "devDependencies": {
